--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dnspython==2.2.1
 ecdsa==0.17.0
 email-validator==1.2.1
 fastapi==0.78.0
+filelock==3.7.0
 greenlet==1.1.2
 h11==0.13.0
 httptools==0.4.0
@@ -25,6 +26,7 @@ MarkupSafe==2.1.1
 orjson==3.6.8
 passlib==1.7.4
 psycopg2-binary==2.9.3
+py3-validate-email==1.0.5
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.0
